@@ -15,6 +15,10 @@ Added driver for PeetBros Ultimeter stations.
 
 Added driver for ADS WS1 stations.
 
+Added automatic power cycling to the FineOffsetUSB driver.  Power cycle the
+station when a USB lockup is detected.  Only works with USB hubs that provide
+per-port power switching.
+
 
 2.6.3 04/10/14
 
